[gd_scene load_steps=11 format=3 uid="uid://c6dic42vckv0e"]

[ext_resource type="Script" uid="uid://bc4sevdr53dpi" path="res://game/ui/components/main_menu_button/main_menu_button.gd" id="1_6rm1l"]
[ext_resource type="Texture2D" uid="uid://bted1168b62fs" path="res://assets/textures/gui/title_screen/select_mode_button/select_mode_button_frame.png" id="2_pvhv8"]
[ext_resource type="Shader" uid="uid://g3ewropiv6mx" path="res://core/shader/hsv.gdshader" id="2_rlo7v"]
[ext_resource type="Texture2D" uid="uid://d2w47ijjty7co" path="res://assets/textures/gui/title_screen/select_mode_button/select_mode_button_content.png" id="4_fawul"]
[ext_resource type="Texture2D" uid="uid://c5q4wrm00fcpb" path="res://assets/textures/gui/title_screen/select_mode_button/hook.png" id="5_ekkyd"]
[ext_resource type="Texture2D" uid="uid://brkasolihf1k7" path="res://assets/textures/gui/title_screen/select_mode_button/menu_titles.png" id="5_u5g1s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fawul"]
resource_local_to_scene = true
shader = ExtResource("2_rlo7v")
shader_parameter/hue_shift = 0.0
shader_parameter/saturation_scale = 1.0
shader_parameter/value_scale = 1.0
shader_parameter/modulate_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5g1s"]
atlas = ExtResource("4_fawul")
region = Rect2(0, 0, 126, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_6laix"]
atlas = ExtResource("5_u5g1s")
region = Rect2(0, 0, 126, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_167dx"]
atlas = ExtResource("5_ekkyd")
region = Rect2(0, 0, 56, 32)

[node name="MainMenuButton" type="Control"]
layout_mode = 3
anchor_right = 0.234
anchor_bottom = 0.172333
offset_right = 0.23999
offset_bottom = 5.96
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6rm1l")
description = "Look how cool!"
metadata/_edit_use_anchors_ = true

[node name="FrameTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_fawul")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pvhv8")
expand_mode = 1

[node name="ContentTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.206
anchor_right = 0.92
anchor_bottom = 0.735
offset_left = -1.0
offset_top = -1.008
offset_right = 1.0
offset_bottom = 1.02
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_u5g1s")
expand_mode = 1

[node name="TitleTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.293882
anchor_right = 0.92
anchor_bottom = 0.662118
offset_top = 0.0159988
offset_bottom = -0.0240021
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_6laix")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TopIconTexture" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.313
anchor_top = -0.529
anchor_right = 0.687
anchor_bottom = 0.059
offset_left = 0.0499954
offset_top = -0.0279961
offset_right = -0.0500031
offset_bottom = 0.988
grow_horizontal = 2
texture = SubResource("AtlasTexture_167dx")
expand_mode = 1
